# randovania

./: .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .sizewatcher.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Deltarune Randomizer - Chykka Caretaker Harmony.rdvgame  Deltarune Randomizer - Kanpachi Spider Lifegiver.rdvgame  Dockerfile.appimage-builder  Dockerfile.server  MetroidDreadRacePreset2022.rdvpreset  PRIVACY_POLICY.md  README.md  _config.yml  appveyor.yml  async_race_data.json  bleh.rdvpreset  create_windows_release.py  docker-compose-appimage-builder.yml  index.html  output.md  paths.json  prime1.py  pylintrc  pyproject.toml  pytest.ini  pyuic.json  randovania.spec  requirements-lint.in  requirements-lint.txt  requirements-setuptools.txt  requirements-small.in  requirements-small.txt  requirements-twine.txt  requirements-xvfb.txt  (+6 more)
.github/: CODEOWNERS  actionlint.yml  dependabot.yml  linux_apt_dependencies.txt  renovate.json
.github/workflows/: arm-python.yml  benchmark.yml  build-test-publish.yml  daily-generate.yml  docker-image.yml  linter.yml  tests.yml  trick-documentation-report.yml  uic.yml  uv-lock-report.yml  workflow-validate.yml
CommitMessage/: cm.txt
deltapatcher/: NOTICE.txt  PATCH THIS.xdelta  deltpatcher.py
docs/: DATABASE_FORMAT.md  Database Editor.md  Database Format.md  GLOSSARY.md  Glossary.md  Hints.md  Migrations.md  NEW_GAME.md  New Game.md  New Release Process.md  Profiling.md  Release Process.md
opr/: all_prime_dol_patches.py  beam_configuration.py  corruption_dol_patches.py  corruption_dol_versions.py  dol_version.py  echoes_dol_patcher.py  echoes_dol_patches.py  echoes_dol_versions.py  echoes_user_preferences.py  prime1_dol_patches.py  prime1_dol_versions.py
primechecker/: __main__.py  impossible_check.py  log_parser.py  reach.py  world.py
randovania/: __init__.py  __main__.py  _native.pxd  _native.py  _native_helper.py  binary_file.py  binary_file_reader.py  datareader.py  game_description.py  impossible_check.py  log_parser.py  pickup_database.py  prime_binary_decoder.py  reach.py  resolver.py  world.py
randovania/bitpacking/: bitpacking.py  construct_dataclass.py  construct_pack.py  json_dataclass.py  type_enforcement.py
randovania/cli/: __init__.py  analyze.py  cli_lib.py  database.py  development.py  echoes.py  echoes_lib.py  gui.py  interactive.py  layout.py  multiworld.py  prime_database.py  server.py
randovania/data/: .gitignore  CREDITS.txt  migration_data.json  prime2.json  prime2_extra.json
randovania/db_integrity/: integrity.py
randovania/discord_bot/: bot.py  database_command.py  faq_command.py  preset_lookup.py  randovania_cog.py
randovania/dol_patching/: dol_file.py  dol_version.py
randovania/exporter/: game_exporter.py  item_names.py  patch_data_factory.py  patch_data_generator.py  pickup_exporter.py
randovania/game/: data.py  development_state.py  game_enum.py  game_test_data.py  generator.py  gui.py  hints.py  layout.py  test_data.py  web_info.py
randovania/game_connection/: backend_choice.py  connection_backend.py  connection_base.py  connector_builder_choice.py  dolphin_backend.py  dolphin_executor.py  game_connection.py  memory_executor_choice.py  memory_operation.py  nintendont_backend.py  nintendont_executor.py  prime_remote_connector.py  remote_connector.py
randovania/game_description/: area.py  area_location.py  assignment.py  binary_data.py  data_reader.py  data_writer.py  default_database.py  derived_nodes.py  dock.py  echoes_elevator.py  echoes_game_specific.py  editor.py  filtered_game_database_view.py  game_database_view.py  game_description.py  game_description_migration.py  game_migration.py  game_patches.py  hint.py  hint_features.py  integrity_check.py  migration_data.py  node.py  node_search.py  pretty_print.py  requirements.py  resource_type.py  resources.py  schema_migration.py  starting_location.py  teleporter.py  trick_documentation.py  world.py  world_list.py
randovania/games/: binary_data.py  default_data.py  game.py  patcher.py  patcher_provider.py  prime3.py
randovania/generator/: base_patches_factory.py  dock_weakness_distributor.py  elevator_distributor.py  generator.py  generator_native.pxd  generator_native.py  generator_native_helper.py  generator_reach.py  graph.py  hint_distributor.py  hint_state.py  old_generator_reach.py  path_generator_reach.py  pre_fill_params.py  reach_lib.py  teleporter_distributor.py
randovania/graph/: __init__.py  graph_requirement.pxd  graph_requirement.py  requirement_converter.py  state.py  state_native.py  world_graph.pxd  world_graph.py  world_graph_factory.py
randovania/gui/: .gitignore  TabService.py  __init__.py  async_race_room_window.py  auto_tracker_window.py  background_task_mixin.py  collapsible_dialog.py  common_qt_lib.py  connections_editor.py  connections_editor.ui  (+56 more)
scripts/: interactive_randovania.bat  iteractive_randovania.bat
test/: __init__.py  conftest.py  test_binary_file.py  test_datareader.py  test_game_description.py  test_log_parser.py  test_prime_binary_decoder.py  test_random.py  test_randovania_init.py
tools/: .gitignore  Randovania Installer.aip  add_rel_load_to_dol.py  analyze_pyspy_raw.py  automate_echoes_node_coords.py  batch-generate-seed.sh  build_flatpak.py  bulk_generate_for_discord.py  bulk_generate_for_discord.sh  bulk_move_nodes.py  bulk_seed_search.py  bundle_macos_universal_wheels.py  check_py_version.py  create_release.py  create_signing_certificate.ps1  deploy_server.py  export_db_videos.py  fake_nintendont_server.py  game_console.py  get_version_from_artifacts.py  log_analyzer.py  migrate_tracker_assets.py  move_tracker_assets_to_game_dirs.py  old_data.db  parse_nintendont_packet.py  post_discord_webhook.py  prepare_dev_server_config.py  prepare_virtual_env.bat  prepare_virtual_env.py  prepare_virtual_env.sh  profile.ps1  pyspy_tools.py  rdv_logo.icns  rekey_tracker_themes_by_name.py  send_report_to_discord.py  server_image_test.sh  shell.nix  sky_temple_key.icns  split_tracker_dir_per_game.py  start_client.bat  (+11 more)
(+3409 files in other folders)
