[metadata]
name = randovania
author = Henrique Gemignani Passos Lima
url = https://github.com/randovania/randovania
description = A multiworld randomizer for Metroid Prime and Metroid Prime 2: Echoes.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment


[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.9

install_requires =
    networkx
    bitstruct
    construct
    tenacity>=7.0.0
    python-slugify
    python-socketio[asyncio_client]
    aiohttp
    aiofiles
    frozendict
    dulwich>=0.20
    py_randomprime>=1.1.2
    mp2hudcolor>=1.0.10
    retro-data-structures>=0.6.0
    SuperDuperMetroid>=1.2.0
    open-dread-rando>=0.11.1
    cave-story-randomizer>=1.0.0
    tsc-utils>=0.2.0

[options.packages.find]
exclude =
    test

[options.extras_require]
gui =
    PySide6
    appdirs
    qasync
    async-wiiload
    dolphin-memory-engine>=1.0.2
    markdown
    matplotlib>=3.3.3
    nod>=1.5
    pid>=3.0.0
    pypresence
    pyqtdarktheme

server =
    cryptography
    discord.py  # for randovania/server/discord
    discord-py-interactions  # for randovania/server/discord/database_command
    eventlet
    flask-discord
    flask-socketio
    prometheus-flask-exporter
    peewee
    requests-oauthlib
    Pillow>=9.0.0  # for randovania/server/discord/database_command
    graphviz  # for randovania/server/discord/database_command

test =
    pytest
    pytest-cov
    pytest-qt
    pytest-asyncio
    pytest-mock
    mock>=4.0


[options.entry_points]
console_scripts =
    randovania = randovania.__main__:main
